# bloom-engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  compileShader.bat  compileShaders.py  main.cpp  updateResources.py
bloom/: CMakeLists.txt  bloom.h  bloom.hpp  bloom_header.h  bloom_header.hpp
bloom/lib/stb/: stb_image.h
bloom/src/: camera.cpp  camera.hpp  core.h  core.hpp  engine.cpp  engine.h  engine.hpp  entrypoint.h  entrypoint.hpp  factory.cpp  factory.hpp  layer.cpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  log.cpp  log.h  log.hpp  logger.h  object.hpp  resource_loader.cpp  resource_loader.hpp  simple_render_system.cpp  simple_render_system.hpp  window.cpp  window.h  window.hpp
bloom/src/events/: event.h  event.hpp  game_event.h  game_event.hpp  key_event.h  key_event.hpp  mouse_event.h  mouse_event.hpp
bloom/src/layers/: game_layer.cpp  game_layer.hpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  ui_layer.cpp  ui_layer.hpp
bloom/src/objects/: actor.cpp  actor.hpp  camera.cpp  camera.hpp  directional_light.cpp  directional_light.hpp  light.hpp  object.hpp  point_light.cpp  point_light.hpp
bloom/src/render/: buffer.cpp  buffer.hpp  descriptor_layouts.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  descriptors.cpp  descriptors.hpp  devices.cpp  devices.hpp  frame_info.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  swap_chain.hpp  texture.cpp  texture.hpp
bloom/src/render/systems/: simple_render_system.cpp  simple_render_system.hpp
docs/: Doxyfile  inheritance_graph.canvas
docs/html/: actor_8hpp.html  actor_8hpp_source.html  annotated.html  bloom_8hpp.html  bloom_8hpp_source.html  bloom__header_8hpp.html  bloom__header_8hpp_source.html  buffer_8hpp.html  buffer_8hpp_source.html  camera_8hpp.html  camera_8hpp_source.html  class_sandbox-members.html  class_sandbox.html  class_wanderer-members.html  class_wanderer.html  classbloom_1_1_actor-members.html  classbloom_1_1_actor.html  classbloom_1_1_camera-members.html  classbloom_1_1_camera.html  classbloom_1_1_engine-members.html  classbloom_1_1_engine.html  classbloom_1_1_event-members.html  classbloom_1_1_event.html  classbloom_1_1_event_dispatcher-members.html  classbloom_1_1_event_dispatcher.html  classbloom_1_1_factory-members.html  classbloom_1_1_factory.html  classbloom_1_1_game_render_event-members.html  classbloom_1_1_game_render_event.html  classbloom_1_1_game_tick_event-members.html  classbloom_1_1_game_tick_event.html  classbloom_1_1_key_event-members.html  classbloom_1_1_key_event.html  classbloom_1_1_key_pressed_event-members.html  classbloom_1_1_key_pressed_event.html  classbloom_1_1_key_released_event-members.html  classbloom_1_1_key_released_event.html  classbloom_1_1_key_typed_event-members.html  classbloom_1_1_key_typed_event.html  classbloom_1_1_layer-members.html  (+196 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  defines_1.js  (+50 more)
docs/latex/: actor_8hpp.tex  actor_8hpp_source.tex  annotated.tex  bloom_8hpp.tex  bloom_8hpp_source.tex  bloom__header_8hpp.tex  bloom__header_8hpp_source.tex  buffer_8hpp.tex  buffer_8hpp_source.tex  camera_8hpp.tex  camera_8hpp_source.tex  class_sandbox.eps  class_sandbox.tex  class_wanderer.eps  class_wanderer.tex  classbloom_1_1_actor.eps  classbloom_1_1_actor.tex  classbloom_1_1_camera.eps  classbloom_1_1_camera.tex  classbloom_1_1_engine.eps  classbloom_1_1_engine.tex  classbloom_1_1_event.eps  classbloom_1_1_event.tex  classbloom_1_1_event_dispatcher.tex  classbloom_1_1_factory.tex  classbloom_1_1_game_render_event.eps  classbloom_1_1_game_render_event.tex  classbloom_1_1_game_tick_event.eps  classbloom_1_1_game_tick_event.tex  classbloom_1_1_key_event.eps  classbloom_1_1_key_event.tex  classbloom_1_1_key_pressed_event.eps  classbloom_1_1_key_pressed_event.tex  classbloom_1_1_key_released_event.eps  classbloom_1_1_key_released_event.tex  classbloom_1_1_key_typed_event.eps  classbloom_1_1_key_typed_event.tex  classbloom_1_1_layer.eps  classbloom_1_1_layer.tex  classbloom_1_1_layer_stack.tex  (+124 more)
example_glfw_vulkan/: CMakeLists.txt  README
resources/shaders/: default.frag  default.frag.spv  default.vert  default.vert.spv
resources/textures/: T_Default.tga  T_Default_E.tga  T_Default_N.tga  T_Default_RMO.tga
sandbox/: CMakeLists.txt  main.cpp
wanderer/: CMakeLists.txt  editor_camera.cpp  editor_camera.hpp  main.cpp  wanderer.cpp  wanderer.hpp
